deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-forgethreads
  labels:
    app: wf-deploy
spec:
  replicas: 1

  selector:
    matchLabels:
      app: web-forgethreads

  template:
    metadata:
      labels:
        app: web-forgethreads
    spec:
      containers:
      - name: web-forgethreads
        image: ghcr.io/criquelme2003/web_forgethreads_image:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /docs
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /docs
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata: 
  name: web-forgethreads
  namespace: criquelme
spec:
  selector:
    app: web-forgethreads
  ports: 
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-forgethreads-ingress
  namespace: criquelme
  annotations:

    external-dns.alpha.kubernetes.io/hostname: web-forgethreads.inf.uct.cl
    external-dns.alpha.kubernetes.io/target: proxy.inf.uct.cl
    external-dns.alpha.kubernetes.io/ttl: "1"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx          
  tls:
    - hosts: [ web-forgethreads.inf.uct.cl ]
      secretName: inf-uct-cl-tls
  rules:
    - host: web-forgethreads.inf.uct.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-forgethreads
                port:
                  number: 80
